# ChangeLog for net-misc/drivel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/drivel/ChangeLog,v 1.39 2011/03/05 00:51:02 ranger Exp $

  05 Mar 2011; Brent Baude <ranger@gentoo.org> drivel-3.0.0.ebuild:
  stable ppc, bug 354755

  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> drivel-3.0.0.ebuild:
  Stable on amd64 wrt bug #354755

  15 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> drivel-3.0.0.ebuild:
  x86 stable wrt bug #354755

  13 Feb 2011; Hans de Graaff <graaff@gentoo.org> -drivel-2.0.4.ebuild:
  Remove old version.

  06 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  drivel-3.0.0.ebuild, +files/drivel-3.0.0-compile-warnings.patch:
  Fix bug #287746, compile-warnings support was automagic, which forced
  -Werror cflag to be used (and compilation to fail). Fix some QA.

  05 Oct 2009; Hans de Graaff <graaff@gentoo.org> drivel-3.0.0.ebuild:
  Do not error out on warnings, this should fix the build as reported in
  #287746 and is recommended by upstream. Will be default in 3.0.1."

*drivel-3.0.0 (03 Oct 2009)

  03 Oct 2009; Hans de Graaff <graaff@gentoo.org> +drivel-3.0.0.ebuild:
  Version bump: major update. Dropped use of deprecated gnome libraries.
  Many bug fixes and minor enhancements.

*drivel-2.0.4 (22 Jun 2009)

  22 Jun 2009; Hans de Graaff <graaff@gentoo.org> -drivel-2.0.2.ebuild,
  +drivel-2.0.4.ebuild, metadata.xml:
  Version bump. Remove non-unused rhythmbox USE flag description.

  12 Oct 2007; Rémi Cardona <remi@gentoo.org> drivel-2.0.2.ebuild,
  drivel-2.0.3.ebuild:
  update gtksourceview deps (see bug #195366)

  30 Jul 2007; Christian Faulhammer <opfer@gentoo.org> drivel-2.0.3.ebuild:
  stable x86, bug 186146

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org> drivel-2.0.3.ebuild:
  ppc stable, bug #186146

  21 Jul 2007; Hans de Graaff <graaff@gentoo.org> -drivel-1.2.1.ebuild,
  -drivel-1.2.4-r1.ebuild:
  Remove old versions
